--- a/basics/Untitled0.ipynb
+++ b/basics/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8xRfr+llVv8RvsM0zwWoH",
+      "authorship_tag": "ABX9TyP2KRA4baH7Kz2VEWiDvZiS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Azeezat-git/datascience/blob/main/Untitled0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Azeezat-git/datascience/blob/main/basics/Untitled0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,7 +33,9 @@
         "id": "83nSI0yt67wQ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "print(\"Hello world\")"
+      ]
     }
   ]
 }
