--- a/basics/Untitled0.ipynb
+++ b/basics/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2KRA4baH7Kz2VEWiDvZiS",
+      "authorship_tag": "ABX9TyNFWmVwFXyL/TuDuAUJf0Eh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "print(\"Hello world\")"
+        "print(\"Hello world new\")"
       ]
     }
   ]
