--- a/basics/numpy.ipynb
+++ b/basics/numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0hVcpATIUDjczyK5QlAmn",
+      "authorship_tag": "ABX9TyNPv5U6POhQsaN95IrvQshH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,12 +342,119 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "array = np.random.randint(0,10,(2,3))\n",
+        "print(array)\n",
+        "print(array.shape)"
+      ],
       "metadata": {
-        "id": "7mLw4dMv-32N"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7mLw4dMv-32N",
+        "outputId": "8f4b0bf1-2044-4010-936d-fd9ee5a49a89"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[8 4 6]\n",
+            " [3 8 7]]\n",
+            "(2, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trans = np.transpose(array)\n",
+        "print(trans)\n",
+        "print(trans.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-aD5Aml6_Row",
+        "outputId": "a6949a31-3acc-4fe3-ef76-18d1131a5fa6"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[8 3]\n",
+            " [4 8]\n",
+            " [6 7]]\n",
+            "(3, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trans2=array.T\n",
+        "print(trans2)\n",
+        "print(trans2.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W0r7c2mV_eJR",
+        "outputId": "a98b46a6-4d59-429f-aeb8-6cfc490d41db"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[8 3]\n",
+            " [4 8]\n",
+            " [6 7]]\n",
+            "(3, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.random.randint(0,10,(2,3))\n",
+        "print(a)\n",
+        "print(a.shape)\n",
+        "b=a.reshape(2,3)\n",
+        "print(b)\n",
+        "print(b.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xw2Eu-MV_q20",
+        "outputId": "1749b545-bda9-4e73-e6a3-0f299109e571"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[6 1 8]\n",
+            " [2 4 4]]\n",
+            "(2, 3)\n",
+            "[[6 1 8]\n",
+            " [2 4 4]]\n",
+            "(2, 3)\n"
+          ]
+        }
+      ]
     }
   ]
 }
