--- a/first_ML/Untitled3.ipynb
+++ b/first_ML/Untitled3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8xRfr+llVv8RvsM0zwWoH",
+      "authorship_tag": "ABX9TyOad/hhUD63wSpz6K66bWP7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,97 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "6WkIV4uL6vey"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6WkIV4uL6vey",
+        "outputId": "f7842128-db2e-4a26-ae53-c44f59785bd2"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: kaggle in /usr/local/lib/python3.10/dist-packages (1.5.16)\n",
+            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.10/dist-packages (from kaggle) (1.16.0)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from kaggle) (2024.2.2)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.10/dist-packages (from kaggle) (2.8.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from kaggle) (2.31.0)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from kaggle) (4.66.2)\n",
+            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.10/dist-packages (from kaggle) (8.0.4)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.10/dist-packages (from kaggle) (2.0.7)\n",
+            "Requirement already satisfied: bleach in /usr/local/lib/python3.10/dist-packages (from kaggle) (6.1.0)\n",
+            "Requirement already satisfied: webencodings in /usr/local/lib/python3.10/dist-packages (from bleach->kaggle) (0.5.1)\n",
+            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.10/dist-packages (from python-slugify->kaggle) (1.3)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->kaggle) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->kaggle) (3.7)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Installing the kaggle library\n",
+        "!pip install kaggle"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Upload your kaggle json file"
+      ],
+      "metadata": {
+        "id": "PqMzgjzw8fPZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# configuring the path of kaggle.json file\n",
+        "!mkdir -p ~/.kaggle\n",
+        "!cp kaggle.json ~/.kaggle/\n",
+        "!chmod 600  ~/.kaggle/kaggle.json"
+      ],
+      "metadata": {
+        "id": "-5gPXAEC9rfJ"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Importing the required dataset"
+      ],
+      "metadata": {
+        "id": "9eibk81b-AIl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# API to fetch the dataset from Kaggle\n",
+        "!kaggle competitions download -c LANL-Earthquake-Prediction"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HW4S4L8L-FAL",
+        "outputId": "dfc4313e-167d-4485-9dda-34ed54bdaa29"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading LANL-Earthquake-Prediction.zip to /content\n",
+            "100% 2.27G/2.27G [00:26<00:00, 82.9MB/s]\n",
+            "100% 2.27G/2.27G [00:26<00:00, 91.2MB/s]\n"
+          ]
+        }
+      ]
     }
   ]
 }
